<resources>
    <string name="app_name">starlink</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="task">Task</string>
    <string name="e_mail">E-mail address or username</string>
    <string name="rk77055817_gmail_com">rk77055817@gmail.com</string>
    <string name="password"> Create Password</string>
    <string name="pass_w">********</string>
    <string name="e_mail_reg">E-mail</string>
    <string name="name">Name</string>
    <string name="rohit">rohit</string>
    <string name="_23">23</string>
    <string name="age">Age</string>
    <string name="_22_22_2222">22-22-2222</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="register">register</string>
    <string name="test_application">test application</string>
    <string name="show_notification">Show Notification</string>

</resources>