<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragment.LoginFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/logoImg"
                    android:layout_width="@dimen/_140sdp"
                    android:layout_height="@dimen/_140sdp"
                    android:layout_marginTop="@dimen/_60sdp"
                    android:src="@mipmap/logo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/font_semibold"
                    android:padding="@dimen/_2sdp"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_40ssp"
                    app:layout_constraintEnd_toEndOf="@+id/logoImg"
                    app:layout_constraintStart_toStartOf="@+id/logoImg"
                    app:layout_constraintTop_toBottomOf="@+id/logoImg" />


                <TextView
                    android:id="@+id/emilTv"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:fontFamily="@font/font_semibold"
                    android:paddingHorizontal="@dimen/_2sdp"
                    android:text="@string/e_mail"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="@+id/emailEdt"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <EditText
                    android:id="@+id/emailEdt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edt_bg"
                    android:elevation="@dimen/_1sdp"
                    android:fontFamily="@font/font_light"
                    android:hint="@string/rk77055817_gmail_com"
                    android:inputType="textEmailAddress"
                    android:paddingVertical="@dimen/_12sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/emilTv" />


                <TextView
                    android:id="@+id/passwordTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/font_semibold"
                    android:paddingHorizontal="@dimen/_2sdp"
                    android:text="@string/password"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintStart_toStartOf="@+id/emailEdt"
                    app:layout_constraintTop_toBottomOf="@+id/emailEdt" />

                <EditText
                    android:id="@+id/passwordEdt"
                    android:layout_width="0dp"

                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:background="@drawable/edt_bg"
                    android:elevation="@dimen/_1sdp"
                    android:fontFamily="@font/font_light"
                    android:hint="@string/pass_w"
                    android:inputType="textPassword"
                    android:paddingVertical="@dimen/_12sdp"
                    android:paddingStart="@dimen/_10sdp"
                    android:textSize="@dimen/_11ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/passwordTv" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/loginBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/gragients"
                    android:fontFamily="@font/font_semibold"
                    android:padding="@dimen/_5sdp"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintEnd_toEndOf="@+id/passwordEdt"
                    app:layout_constraintStart_toStartOf="@+id/passwordEdt"
                    app:layout_constraintTop_toBottomOf="@+id/passwordEdt" />


                <TextView
                    android:id="@+id/reegisterTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/font_semibold"
                    android:text="@string/register"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/loginBtn"
                    app:layout_constraintStart_toStartOf="@+id/loginBtn"
                    app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>